// Vitest Snapshot v1

exports[`Affix > Affix baseVue demo works fine 1`] = `
<div
  class="affix-base"
>
  <div>
    <div>
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          固钉
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix > Affix containerVue demo works fine 1`] = `
<div
  class="affix-container"
  data-v-8141d1d6=""
>
  <div
    class="affix-container-demo1"
    data-v-8141d1d6=""
  >
    <div
      class="background"
      data-v-8141d1d6=""
    >
      <div
        data-v-8141d1d6=""
      >
        <div>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary"
            data-v-8141d1d6=""
            type="button"
          >
            <span
              class="t-button__text"
            >
              Fixed open:0
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
